readability fixe